add music game + change sprite runner and more :)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <title>Farm of Freixa</title>
@@ -8,22 +7,18 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
-
     <style>
         html,
         body {
             margin: 0;
             padding: 0;
+            background-color: black;
         }
     </style>
 </head>
-
 <body>
-
-    <div id="content"></div>
+    <div id="farm-of-freixa"></div>
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
-
 </body>
-
 </html>
