--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Farm of Freixa</title>
+    <title>Freixa's Farm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -14,11 +14,10 @@
             padding: 0;
             background-color: black;
         }
-        
     </style>
 </head>
 <body>
-    <div id="farm-of-freixa"></div>
+    <div id="freixas-farm"></div>
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
