--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
-    <style>
+    <link rel="manifest" href="/manifest.json">
+    <style> 
         html,
         body {
             margin: 0;
             padding: 0;
             background-color: black;
+            font-family: 'comicbook';
         }
     </style>
 </head>
